<resources>

    <string name="app_name">AnnoChat</string>
    <string name="error_dialog_title">Error</string>
    <string name="hello_world">Hello world!</string>
    <string name="hint_username">Username</string>
    <string name="hint_password">Password</string>
    <string name="menu_settings">Settings</string>
    <string name="dialog_login_text_wait">Logging in, please wait &#8230;</string>
    <string name="dialog_login_title">Login</string>
    <string name="btn_text_login">Login</string>
    <string name="btn_text_register">Register</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_document_view">DocumentViewActivity</string>
    <string name="document_chatbox_type_code">document-chat-T0900139-%</string>
    <string name="sample_text">Test string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysis Test string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysis Test string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysis Test string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysis Test string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysis Test string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysis Test string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysis Test string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysis Test string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysisTest string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysis Test string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysisTest string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysisTest string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysisTest string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysisTest string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysisTest string, while not null, from beginning to end, from top to bottom, let it go, one two 
        three, four five six, etc, MKG, nice to meet you, data structure and algorithm analysis</string>
    <string name="annochat">AnnoChat</string>

</resources>