<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/tv_branding"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:background="#98FB98"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/app_name"
        android:textColor="#FF8C00"
        android:textSize="15sp"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/linearLayout_loginInput"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:layout_marginTop="-10dp"
        android:background="#7FFF00"
        android:orientation="vertical"
        android:padding="5dp" >

        <EditText
            android:id="@+id/et_username_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/hint_username"
            android:padding="2dp" >
        </EditText>

        <EditText
            android:id="@+id/et_password_input"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:hint="@string/hint_password"
            android:inputType="textPassword"
            android:padding="2dp" >
        </EditText>

        <Button
            android:id="@+id/btn_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_text_login" >
        </Button>
        
        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="@string/btn_text_register" >
        </Button>
    </LinearLayout>

</LinearLayout>